feature crypto trading:
- add new entity trade, trading pair
- fix favio icon